crates/tantalum_lexer/tests/snapshots/snapshots__conditionals.snap
---
source: tantalum_lexer/tests/snapshots.rs
expression: tokens
snapshot_kind: text
---
[
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 0,
        line: 1,
        column: 1,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 2,
        line: 1,
        column: 3,
      ),
    ),
    data: Token(
      lexeme: "fn",
      kind: KeywordFn,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 3,
        line: 1,
        column: 4,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 7,
        line: 1,
        column: 8,
      ),
    ),
    data: Token(
      lexeme: "main",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 7,
        line: 1,
        column: 8,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 8,
        line: 1,
        column: 9,
      ),
    ),
    data: Token(
      lexeme: "(",
      kind: LeftParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 8,
        line: 1,
        column: 9,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 9,
        line: 1,
        column: 10,
      ),
    ),
    data: Token(
      lexeme: ")",
      kind: RightParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 9,
        line: 1,
        column: 10,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 10,
        line: 1,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: ":",
      kind: Colon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 11,
        line: 1,
        column: 12,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 14,
        line: 1,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "i32",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 15,
        line: 1,
        column: 16,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 16,
        line: 1,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "{",
      kind: LeftBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 21,
        line: 2,
        column: 5,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 24,
        line: 2,
        column: 8,
      ),
    ),
    data: Token(
      lexeme: "let",
      kind: KeywordLet,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 25,
        line: 2,
        column: 9,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 26,
        line: 2,
        column: 10,
      ),
    ),
    data: Token(
      lexeme: "a",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 26,
        line: 2,
        column: 10,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 27,
        line: 2,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: ":",
      kind: Colon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 28,
        line: 2,
        column: 12,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 31,
        line: 2,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "i32",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 32,
        line: 2,
        column: 16,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 33,
        line: 2,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "=",
      kind: Equal,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 34,
        line: 2,
        column: 18,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 36,
        line: 2,
        column: 20,
      ),
    ),
    data: Token(
      lexeme: "10",
      kind: DecimalIntegerLiteral,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 36,
        line: 2,
        column: 20,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 37,
        line: 2,
        column: 21,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 42,
        line: 3,
        column: 5,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 45,
        line: 3,
        column: 8,
      ),
    ),
    data: Token(
      lexeme: "let",
      kind: KeywordLet,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 46,
        line: 3,
        column: 9,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 47,
        line: 3,
        column: 10,
      ),
    ),
    data: Token(
      lexeme: "b",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 47,
        line: 3,
        column: 10,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 48,
        line: 3,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: ":",
      kind: Colon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 49,
        line: 3,
        column: 12,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 52,
        line: 3,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "i32",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 53,
        line: 3,
        column: 16,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 54,
        line: 3,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "=",
      kind: Equal,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 55,
        line: 3,
        column: 18,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 57,
        line: 3,
        column: 20,
      ),
    ),
    data: Token(
      lexeme: "20",
      kind: DecimalIntegerLiteral,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 57,
        line: 3,
        column: 20,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 58,
        line: 3,
        column: 21,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 63,
        line: 4,
        column: 5,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 66,
        line: 4,
        column: 8,
      ),
    ),
    data: Token(
      lexeme: "let",
      kind: KeywordLet,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 67,
        line: 4,
        column: 9,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 68,
        line: 4,
        column: 10,
      ),
    ),
    data: Token(
      lexeme: "c",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 68,
        line: 4,
        column: 10,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 69,
        line: 4,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: ":",
      kind: Colon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 70,
        line: 4,
        column: 12,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 73,
        line: 4,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "i32",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 74,
        line: 4,
        column: 16,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 75,
        line: 4,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "=",
      kind: Equal,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 76,
        line: 4,
        column: 18,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 78,
        line: 4,
        column: 20,
      ),
    ),
    data: Token(
      lexeme: "30",
      kind: DecimalIntegerLiteral,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 78,
        line: 4,
        column: 20,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 79,
        line: 4,
        column: 21,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 85,
        line: 6,
        column: 5,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 87,
        line: 6,
        column: 7,
      ),
    ),
    data: Token(
      lexeme: "if",
      kind: KeywordIf,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 88,
        line: 6,
        column: 8,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 89,
        line: 6,
        column: 9,
      ),
    ),
    data: Token(
      lexeme: "a",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 90,
        line: 6,
        column: 10,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 91,
        line: 6,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: ">",
      kind: RightAngle,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 92,
        line: 6,
        column: 12,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 93,
        line: 6,
        column: 13,
      ),
    ),
    data: Token(
      lexeme: "b",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 94,
        line: 6,
        column: 14,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 95,
        line: 6,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "{",
      kind: LeftBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 104,
        line: 7,
        column: 9,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 110,
        line: 7,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "return",
      kind: KeywordReturn,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 111,
        line: 7,
        column: 16,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 112,
        line: 7,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "a",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 112,
        line: 7,
        column: 17,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 113,
        line: 7,
        column: 18,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 118,
        line: 8,
        column: 5,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 119,
        line: 8,
        column: 6,
      ),
    ),
    data: Token(
      lexeme: "}",
      kind: RightBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 120,
        line: 8,
        column: 7,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 124,
        line: 8,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: "else",
      kind: KeywordElse,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 125,
        line: 8,
        column: 12,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 127,
        line: 8,
        column: 14,
      ),
    ),
    data: Token(
      lexeme: "if",
      kind: KeywordIf,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 128,
        line: 8,
        column: 15,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 129,
        line: 8,
        column: 16,
      ),
    ),
    data: Token(
      lexeme: "b",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 130,
        line: 8,
        column: 17,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 131,
        line: 8,
        column: 18,
      ),
    ),
    data: Token(
      lexeme: ">",
      kind: RightAngle,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 132,
        line: 8,
        column: 19,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 133,
        line: 8,
        column: 20,
      ),
    ),
    data: Token(
      lexeme: "c",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 134,
        line: 8,
        column: 21,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 135,
        line: 8,
        column: 22,
      ),
    ),
    data: Token(
      lexeme: "{",
      kind: LeftBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 144,
        line: 9,
        column: 9,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 150,
        line: 9,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "return",
      kind: KeywordReturn,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 151,
        line: 9,
        column: 16,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 152,
        line: 9,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "b",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 152,
        line: 9,
        column: 17,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 153,
        line: 9,
        column: 18,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 158,
        line: 10,
        column: 5,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 159,
        line: 10,
        column: 6,
      ),
    ),
    data: Token(
      lexeme: "}",
      kind: RightBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 160,
        line: 10,
        column: 7,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 164,
        line: 10,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: "else",
      kind: KeywordElse,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 165,
        line: 10,
        column: 12,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 166,
        line: 10,
        column: 13,
      ),
    ),
    data: Token(
      lexeme: "{",
      kind: LeftBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 175,
        line: 11,
        column: 9,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 181,
        line: 11,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "return",
      kind: KeywordReturn,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 182,
        line: 11,
        column: 16,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 183,
        line: 11,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "c",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 183,
        line: 11,
        column: 17,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 184,
        line: 11,
        column: 18,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 189,
        line: 12,
        column: 5,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 190,
        line: 12,
        column: 6,
      ),
    ),
    data: Token(
      lexeme: "}",
      kind: RightBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "conditionals.ta",
        position: 191,
        line: 13,
        column: 1,
      ),
      end: Location(
        file_name: "conditionals.ta",
        position: 192,
        line: 13,
        column: 2,
      ),
    ),
    data: Token(
      lexeme: "}",
      kind: RightBrace,
    ),
  ),
]
