crates/tantalum_lexer/tests/snapshots/snapshots__hello_world.snap
---
source: tantalum_lexer/tests/snapshots.rs
expression: tokens
snapshot_kind: text
---
[
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 0,
        line: 1,
        column: 1,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 6,
        line: 1,
        column: 7,
      ),
    ),
    data: Token(
      lexeme: "extern",
      kind: KeywordExtern,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 7,
        line: 1,
        column: 8,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 9,
        line: 1,
        column: 10,
      ),
    ),
    data: Token(
      lexeme: "fn",
      kind: KeywordFn,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 10,
        line: 1,
        column: 11,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 16,
        line: 1,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "printf",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 16,
        line: 1,
        column: 17,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 17,
        line: 1,
        column: 18,
      ),
    ),
    data: Token(
      lexeme: "(",
      kind: LeftParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 17,
        line: 1,
        column: 18,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 23,
        line: 1,
        column: 24,
      ),
    ),
    data: Token(
      lexeme: "format",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 23,
        line: 1,
        column: 24,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 24,
        line: 1,
        column: 25,
      ),
    ),
    data: Token(
      lexeme: ":",
      kind: Colon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 25,
        line: 1,
        column: 26,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 26,
        line: 1,
        column: 27,
      ),
    ),
    data: Token(
      lexeme: "*",
      kind: Star,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 26,
        line: 1,
        column: 27,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 31,
        line: 1,
        column: 32,
      ),
    ),
    data: Token(
      lexeme: "const",
      kind: KeywordConst,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 32,
        line: 1,
        column: 33,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 34,
        line: 1,
        column: 35,
      ),
    ),
    data: Token(
      lexeme: "u8",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 34,
        line: 1,
        column: 35,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 35,
        line: 1,
        column: 36,
      ),
    ),
    data: Token(
      lexeme: ",",
      kind: Comma,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 36,
        line: 1,
        column: 37,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 39,
        line: 1,
        column: 40,
      ),
    ),
    data: Token(
      lexeme: "...",
      kind: DotDotDot,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 39,
        line: 1,
        column: 40,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 40,
        line: 1,
        column: 41,
      ),
    ),
    data: Token(
      lexeme: ")",
      kind: RightParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 40,
        line: 1,
        column: 41,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 41,
        line: 1,
        column: 42,
      ),
    ),
    data: Token(
      lexeme: ":",
      kind: Colon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 42,
        line: 1,
        column: 43,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 45,
        line: 1,
        column: 46,
      ),
    ),
    data: Token(
      lexeme: "i32",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 45,
        line: 1,
        column: 46,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 46,
        line: 1,
        column: 47,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 48,
        line: 3,
        column: 1,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 50,
        line: 3,
        column: 3,
      ),
    ),
    data: Token(
      lexeme: "fn",
      kind: KeywordFn,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 51,
        line: 3,
        column: 4,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 55,
        line: 3,
        column: 8,
      ),
    ),
    data: Token(
      lexeme: "main",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 55,
        line: 3,
        column: 8,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 56,
        line: 3,
        column: 9,
      ),
    ),
    data: Token(
      lexeme: "(",
      kind: LeftParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 56,
        line: 3,
        column: 9,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 57,
        line: 3,
        column: 10,
      ),
    ),
    data: Token(
      lexeme: ")",
      kind: RightParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 57,
        line: 3,
        column: 10,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 58,
        line: 3,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: ":",
      kind: Colon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 59,
        line: 3,
        column: 12,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 62,
        line: 3,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "i32",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 63,
        line: 3,
        column: 16,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 64,
        line: 3,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "{",
      kind: LeftBrace,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 69,
        line: 4,
        column: 5,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 75,
        line: 4,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: "printf",
      kind: Identifier,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 75,
        line: 4,
        column: 11,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 76,
        line: 4,
        column: 12,
      ),
    ),
    data: Token(
      lexeme: "(",
      kind: LeftParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 76,
        line: 4,
        column: 12,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 93,
        line: 4,
        column: 29,
      ),
    ),
    data: Token(
      lexeme: "\"Hello, World!\\n\"",
      kind: StringLiteral,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 93,
        line: 4,
        column: 29,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 95,
        line: 4,
        column: 31,
      ),
    ),
    data: Token(
      lexeme: ".&",
      kind: DotAmpersand,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 95,
        line: 4,
        column: 31,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 96,
        line: 4,
        column: 32,
      ),
    ),
    data: Token(
      lexeme: ")",
      kind: RightParen,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 96,
        line: 4,
        column: 32,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 97,
        line: 4,
        column: 33,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 103,
        line: 6,
        column: 5,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 109,
        line: 6,
        column: 11,
      ),
    ),
    data: Token(
      lexeme: "return",
      kind: KeywordReturn,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 110,
        line: 6,
        column: 12,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 111,
        line: 6,
        column: 13,
      ),
    ),
    data: Token(
      lexeme: "3",
      kind: DecimalIntegerLiteral,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 112,
        line: 6,
        column: 14,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 113,
        line: 6,
        column: 15,
      ),
    ),
    data: Token(
      lexeme: "*",
      kind: Star,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 114,
        line: 6,
        column: 16,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 115,
        line: 6,
        column: 17,
      ),
    ),
    data: Token(
      lexeme: "7",
      kind: DecimalIntegerLiteral,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 116,
        line: 6,
        column: 18,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 117,
        line: 6,
        column: 19,
      ),
    ),
    data: Token(
      lexeme: "+",
      kind: Plus,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 118,
        line: 6,
        column: 20,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 119,
        line: 6,
        column: 21,
      ),
    ),
    data: Token(
      lexeme: "2",
      kind: DecimalIntegerLiteral,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 119,
        line: 6,
        column: 21,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 120,
        line: 6,
        column: 22,
      ),
    ),
    data: Token(
      lexeme: ";",
      kind: Semicolon,
    ),
  ),
  Spanned(
    span: Span(
      start: Location(
        file_name: "hello_world.ta",
        position: 121,
        line: 7,
        column: 1,
      ),
      end: Location(
        file_name: "hello_world.ta",
        position: 122,
        line: 7,
        column: 2,
      ),
    ),
    data: Token(
      lexeme: "}",
      kind: RightBrace,
    ),
  ),
]
